--- a/config.json
+++ b/config.json
@@ -1,5 +1,21 @@
 {
-  "start": "0712",
+  "start": "0831",
+  "0831": {
+    "id": "528",
+    "title": "-Panli代购",
+    "keywords": "Panli代购,代购,海外代购,华人代购,代购中国,淘宝代购,留学生代购",
+    "description": "Panli网－全球最大的专业代购网络，为海外华人代购国内各种商品，方便您的购物需求",
+    "version": "0.0.1",
+    "author": "Julian",
+    "load": {
+      "css": ["./0831/src/scss/main.scss"],
+      "js": ["./libs/js/panli.js", "./libs/js/fastclick.js", "./libs/js/view-rem720.js", "./0831/src/js/main.js"]
+    },
+    "build": {
+      "css": "528.css",
+      "js": "app.js"
+    }
+  },
   "0712": {
     "id": "524",
     "title": "-Panli代购",
